Upgrade triage ai to use latest quarkus annotations.